@@ -11,7 +11,7 @@ wildcard-permission-description: Allow unrestricted use of the {0} command.
 no-timers: no timers
 one-timer: one timer
 many-timers: {0,number} timers
-timers-started: Starting {0} in {1} seconds.
+timers-started: Starting {0} in {1,number,integer} seconds.
 
 # CommandManager messages
 command-no-permission: You are not allowed to do that.
